--- a/index.html
+++ b/index.html
@@ -3,24 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- BOOTSTRAP -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-      crossorigin="anonymous"
-    ></script>
     <!-- MY STYLES -->
     <link rel="stylesheet" href="css/styles.css" />
     <title>Conversor</title>
   </head>
   <body>
-    <h1 class="uppercase">Page title</h1>
+    <div class="container">
+      <div class="input-group">
+        <select
+          class="unity-1 custom-select form-select-sm w-auto"
+          name=""
+          id=""
+        >
+          <option value="m">m</option>
+          <option value="cm">cm</option>
+          <option value="km">km</option>
+        </select>
+        <input
+          type="text"
+          class="custom-input"
+          placeholder="Enter the measure"
+        /><!--input-group-->
+      </div>
+
+      <p class="to uppercase bold">To</p>
+
+      <div class="input-group">
+        <select
+          class="unity-1 custom-select form-select-sm w-auto"
+          name=""
+          id=""
+        >
+          <option value="m">m</option>
+          <option value="cm">cm</option>
+          <option value="km">km</option>
+        </select>
+        <input
+          type="text"
+          class="custom-input"
+          placeholder="Enter the measure"
+        /><!--input-group-->
+      </div>
+    </div>
+    <!-- SCRIPT -->
     <script src="js/script.js"></script>
   </body>
 </html>
