add the basic funcionality

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </select>
         <input
           type="text"
-          class="custom-input"
+          class="measure-1 custom-input"
           placeholder="Enter the measure"
         /><!--input-group-->
       </div>
@@ -30,7 +30,7 @@
 
       <div class="input-group">
         <select
-          class="unity-1 custom-select form-select-sm w-auto"
+          class="unity-2 custom-select form-select-sm w-auto"
           name=""
           id=""
         >
@@ -40,9 +40,14 @@
         </select>
         <input
           type="text"
-          class="custom-input"
+          class="measure-2 custom-input"
           placeholder="Enter the measure"
         /><!--input-group-->
+      </div>
+
+      <div class="btn--container">
+        <button class="btn-convert">Convert</button>
+        <button class="btn-clear">Clear</button>
       </div>
     </div>
     <!-- SCRIPT -->
