disable the same option in the second select

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           id=""
         >
           <option value="m">m</option>
-          <option value="cm">cm</option>
           <option value="km">km</option>
+          <option value="cm">cm</option>
         </select>
         <input
           type="text"
@@ -35,8 +35,8 @@
           id=""
         >
           <option value="m">m</option>
+          <option value="km" selected>km</option>
           <option value="cm">cm</option>
-          <option value="km">km</option>
         </select>
         <input
           type="text"
