--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <div class="container">
+      <div class="container--unit-types">
+        <button class="btn-length">Length</button>
+        <button class="btn-area">Area</button>
+        <button class="btn-volume">Volume</button>
+      </div>
+
       <div class="input-group">
         <select
           class="unity-1 custom-select form-select-sm w-auto"
